--- a/3diena/mogo-projektas/styles/pages/_contact.scss
+++ b/3diena/mogo-projektas/styles/pages/_contact.scss
@@ -41,6 +41,7 @@
     width: 40%;
     vertical-align: top;
     padding-right: 15px;
+    padding-left: 15px;
 
     .follow-part {
       margin-top: 40px;
@@ -158,7 +159,7 @@
 
   #contacts {
     .contacts {
-      padding-right: 20px;
+      padding-right: 10px;
 
       .form {
         input[type="email"] {
@@ -280,7 +281,7 @@
       display: block;
       margin: 0 auto;
       padding-right: 0;
-      width: 90%;
+      width: 95%;
     }
 
     .contacts {
